<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/navpic1"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/nav_habits"
        android:icon="@drawable/navpic2"
        android:title="@string/nav_habits" />
    
    <item
        android:id="@+id/nav_mood"
        android:icon="@drawable/navpic3"
        android:title="@string/nav_mood" />
    
    <item
        android:id="@+id/nav_hydration"
        android:icon="@drawable/navpic4"
        android:title="@string/nav_hydration" />
    
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/navpic5"
        android:title="@string/nav_settings" />
</menu>
