<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/backgroundColor">

    <!-- Image Section -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="32dp">

        <ImageView
            android:id="@+id/onboardingImage"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/onboarding1_image"
            android:scaleType="centerInside"
            android:src="@drawable/check_list" />

    </LinearLayout>

    <!-- Content Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="16dp">

        <!-- Title -->
        <TextView
            android:id="@+id/onboardingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:shadowColor="@color/primaryColor"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/onboarding1_title"
            android:textColor="@color/textColorPrimary"
            android:textSize="35sp"
            android:textStyle="bold" />

        <!-- Description -->
        <TextView
            android:id="@+id/onboardingDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/onboarding1_description"
            android:textColor="@color/textColorPrimary"
            android:textSize="25sp" />

    </LinearLayout>

</LinearLayout>
